--- a/front-end/src/SuggestedImages.scss
+++ b/front-end/src/SuggestedImages.scss
@@ -1,8 +1,11 @@
-
+*{
+  font-family: Arial, Helvetica, sans-serif;
+    font-style: unset;
+}
 .product-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+   
     // background-color: #ece2de9c;
     width: 100%;
     height: 1000px;
@@ -12,24 +15,79 @@
   }
   
   
+  .image-container{
+    
+    height: 500px;
+  
+    margin-top: 80px;
+   
+   
+    width: 70%;
+  //   border: 40px solid rgba(70, 61, 52, 0.275);
+  }
+  .image-container:hover{
+    border: 40px solid white;
+
+  }
+ .Clothing-Accessories{
+  padding-bottom: 4px;
+  color: #888888;
+
+ }
 
   
-  .product-card {
-    width: 250px;
-    margin: 10px;
-    text-align: center;
-  }
+  .main3-images {
   
-  .product-card img {
-    width: 100%;
-    height: auto;
+    object-fit: cover;
+    text-align: start;
+    
+    width: 465px;
+    height: 410px;
+    background-color: #c6b6b3;
+   
+  
   }
+  .i2-images{
+    padding-left: 60px;
+    width: 470px;
+    height: 410px;
+    background-color: #c6b8b6;
+
+   }
+  
+
+  
+  .product-details{
+    // background-color: #888;
+    // display: block;
+    // height: 20px;
+    // width: 20px;
+    // border: #888 solid;
+    
+    display: inline-block;
+    padding: 50px;
+    
+    font-size: 20px;
+    font-weight: bold;
+  
+    margin-top: 80px;
+    height: 500px;
+    border-radius: 0.8rem;
+    width: 30%;
+   // border:30px #888 solid;
+    
+    }
+    .product-details:hover{
+     // border:40px #888888 solid;
+    }
+
   
   .product-card h2 {
     margin: 0.5rem 0;
   }
   
   .price-strikethrough {
+    
     text-decoration: line-through;
     color: #888;
   }
@@ -38,6 +96,7 @@
     color: #ff6347;
     font-size: 1.2rem;
     font-weight: bold;
+    
   }
   
   .discount {
@@ -65,30 +124,6 @@
     background-color: rgba(7, 2, 1, 0.979);
   }
 
-  .product-details{
-  // background-color: #888;
-  // display: block;
-  // height: 20px;
-  // width: 20px;
-  // border: #888 solid;
-  display: inline-block;
-  padding: 50px;
-  
-  padding-top: 100px;
-  color: rgb(190, 130, 11);
-  font-size: 20px;
-  font-weight: bold;
-  margin-left: 20px;
-  margin-top: 80px;
-  height: 500px;
-  border-radius: 0.8rem;
-  
-  }
-  .product-details:hover{
-    border:30px #888 solid;
-  }
-  
-
   .pro-details{
     color: rgb(6, 70, 91);
     margin-bottom: 2px;
@@ -96,19 +131,67 @@
     
   }
 
-  .image-container{
-    
-    height: 500px;
-    margin-top: 80px;
-    border-radius: 0.8rem;
-  }
-  .image-container:hover{
-    border: 30px solid rgb(223, 232, 221);
-
-  }
-
+  
 .text
 {
  
   padding-bottom: 20px;
+}
+
+.select-size{
+  margin-top: 10px;
+}
+
+.size{
+  display: flex;
+ justify-content: space-around;
+ margin: 20px;
+}
+
+.sizep1{
+  
+  border-radius: 50%;
+  width: 40px;
+  text-align: center;
+background-color: #ff6347;}
+
+.sizep2 {
+  width: 40px;
+  text-align: center;
+  border: 2px solid red;
+  border-radius: 50%;
+}
+
+.sizep3 {
+  width: 40px;
+  text-align: center;
+  border: 2px solid red;
+  border-radius: 50%;
+}
+
+.sizep4 {
+  width: 40px;
+  text-align: center;
+  border: 2px solid red;
+  border-radius: 50%;
+}
+.sizep5 {
+  width: 40px;
+  text-align: center;
+  border: 2px solid red;
+  border-radius: 50%;
+}
+
+.name{
+  margin-bottom: 10px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 3rem;
+  font-weight: bold;
+} 
+.descr{
+ 
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-size: 1rem;
+  font-weight: bolder;
+  margin-bottom: 20px;
 }
