--- a/front-end/src/SuggestedImages.scss
+++ b/front-end/src/SuggestedImages.scss
@@ -8,7 +8,7 @@
    
     // background-color: #ece2de9c;
     width: 100%;
-    height: 1000px;
+    height: 100%;
     //background: linear-gradient(to right, hsl(94, 20%, 93%), #ceffc9);
     border: #0c0101cc solid;
 
@@ -77,9 +77,9 @@
    // border:30px #888 solid;
     
     }
-    .product-details:hover{
-     // border:40px #888888 solid;
-    }
+    // .product-details:hover{
+    //  // border:40px #888888 solid;
+    // }
 
   
   .product-card h2 {
@@ -118,6 +118,7 @@
     font-size: 1.2rem;
     font-weight: bold;
     cursor: pointer;
+    margin-top: 20px;
   }
   
   .add-to-bag:hover {
@@ -142,18 +143,39 @@
   margin-top: 10px;
 }
 
-.size{
+.filter-container{
   display: flex;
- justify-content: space-around;
- margin: 20px;
+  gap: 10px;
+  align-items: center;
 }
 
-.sizep1{
-  
+.size-active{
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+  background-color: #ff6347;
   border-radius: 50%;
-  width: 40px;
-  text-align: center;
-background-color: #ff6347;}
+  min-width: 50px;
+  color: white !important;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.size{
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+  background-color: #fffefe;
+  border-radius: 50%;
+  min-width: 50px;
+  border: 1px solid #ff6347;
+  color: black !important;
+  cursor: pointer;
+}
+
+
+
 
 .sizep2 {
   width: 40px;
