--- a/front-end/src/Cart.scss
+++ b/front-end/src/Cart.scss
@@ -10,7 +10,7 @@
 }
 .shopping-cart{
     margin-top: 60px;
-    border-bottom: 5px solid wheat;
+   border-bottom: 5px solid wheat;
    
 }
 .cart-images{
@@ -33,7 +33,8 @@
     
 }
 .price-p{
-    margin-left: 1120px;
+   // margin-left: 1120px;
+   margin-left: 73%;
     padding-top: 10px;
     font-size: larger;
     color: rgb(15, 137, 231);
@@ -44,7 +45,7 @@
     //border: 10px solid rebeccapurple;
     display: flex;
     justify-content: space-evenly;
-    border-top: 5px solid wheat;
+   border-top: 5px solid wheat;
 }
 .cart-midle{
 
@@ -53,7 +54,7 @@
     
 }
 .cart-right{
-   //border: 10px solid rgb(153, 51, 51);
+  // border: 10px solid rgb(153, 51, 51);
    display: flex;
    align-items: center;
 justify-content: center;
@@ -88,8 +89,23 @@ justify-content: center;
 }
 
 .total-price{
-    margin-left: 1330px;
+    //margin-left: 1330px;
+    margin-left: 90%;
     padding-top: 10px;
     font-size: larger;
     color: rgb(15, 137, 231);
+}
+.place-order{
+    display: flex;
+    justify-content: end;
+    margin: 10px;
+    margin-right: 40px;
+    
+
+}
+.place-order-btn{
+ background-color: rgb(242, 201, 16);
+ height: 30px;
+ width: 100px;
+    
 }
