--- a/front-end/src/Header.scss
+++ b/front-end/src/Header.scss
@@ -1,213 +1,115 @@
 
-
-
-// .navhover:hover {
-//   border: 2px solid rgb(239, 186, 245);
-// }
-
-// .nav-for-fixed {
-//   border: 2px solid transparent;
-//   display: flex;
-//   position: fixed;
-//   top: 0;
-//   width: 100%;
-//   z-index: 1000;
-// }
-
-// #navbar {
-//   background-color: #f5eef3ef;
-//   display: flex;
-//   flex-wrap: wrap;
-//   justify-content: space-between;
-//   padding: 10px;
-//   width: 100%;
-//   align-items: center;
-// }
-
-// #logo {
-//   height: 50px;
-// }
-
-// a {
-//   padding: 10px;
-// }
-
-// #s {
-//   flex: 1;
-//   margin: 10px;
-//   padding: 5px;
-// }
-
-// #cart {
-//   height: 40px;
-//   margin: 20px;
-//   align-items: center;
-//   border-radius: 0.9rem;
-// }
-
-// #profile {
-//   height: 40px;
-//   margin: 20px;
-//   align-items: center;
-//   border-radius: 0.9rem;
-// }
-
-// .nav-profile {
-//   display: inline-flex;
-//   align-items: center;
-// }
-
-// .content {
-//   padding-top: 120px; /* Adjust this value to match the height of your navbar */
-// }
-
-// /* Responsive Styles */
-// @media screen and (max-width: 768px) {
-//   #s {
-//     flex-basis: 100%;
-//   }
-// }
-
-// @media screen and (max-width: 480px) {
-//   #navbar {
-//     flex-direction: column;
-//   }
-// }
-
-
 *{
   margin: 0;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  border: border-box;
+  box-sizing: border-box;
+  font-weight: 700;
 }
 
-
-
 .navbar{
-  display: flex;
   position: fixed;
-  height: 60px;
+  top: 0;
+  left: 0;
   width: 100%;
-  background-color: #222f3d;
+  height: 60px;
+  background-color: #56ef48;
   color: white;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
- 
+  justify-content: space-around;
+  padding: 0 20px;
+  z-index: 1000;
 }
+
 .navlogo{
+  width: 50px;
   height: 50px;
-  width: 100px;
-}
-.logo{
-  background-image: url(src/assets/images/amazon-logo.png);
-  height: 50px;
-  width: 100px;
-  background-size: cover;
-  
-}
-.border{
-  border: 2px solid transparent;
-}
-.border:hover{
+  overflow: hidden;
   border: 2px solid white;
+  border-radius: 50%;
 }
+
+.logo{
+  width: 100%;
+  height: 100%;
+  background-image: url(src/assets/images/a.jpg);
+  background-size: cover;
+}
+
 .add-icon{
   display: flex;
   align-items: center;
 }
+
 .address-first{
-  font-size: 1rem;
+  font-size: 0.8rem;
   color: whitesmoke;
-  // margin-left: 1rem;
-}
-.address-second{
-  font-size: 1.5rem;
 }
 
-/* box 3 */
+.address-second{
+  font-size: 1rem;
+}
+
 .nav-search{
+  flex: 1;
   display: flex;
-  background-color: antiquewhite;
-  width: 600px;
+  max-width: 60%;
   height: 40px;
   border-radius: 0.4rem;
-  justify-content: space-evenly;
-  border:none;
+  overflow: hidden;
 }
-.nav-search:hover{
-  border: 2px solid rgb(246, 11, 113);
-}
+
 .search-select{
-  border-top-left-radius: 0.4rem;
-  border-bottom-left-radius: 0.4rem;
-  height: 40px;
   width: 70px;
   text-align: center;
-  border:none;
 }
-.search-input{
+
+.nav-search {
+
+  max-width: 50%; /* Adjust the max-width value to decrease the size */
   height: 40px;
-  width: 100%;
+  border-radius: 0.4rem;
+  align-items: center;
+ // border: 20px solid red;
+}
+
+.search-input{
+  width: 700px;
+  height: 40px;
   font-size: 1rem;
-  border:none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  //background-color: rgba(22, 22, 7, 0.933);
+
 }
 
 .search-icon{
-  height: 40px;
   width: 70px;
+  height: 40px;
   font-size: 1.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
- 
-  background-color: rgb(241, 241, 175);
-  border-top-right-radius: 0.4rem;
-  border-bottom-right-radius:0.4rem ;
+  background-color: rgba(22, 22, 7, 0.933);
 }
-
-/* box 4 */
 
 .nav-second{
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: bold;
 }
+
 span{
-  font-size: 0.9rem;
+  font-size: 0.7rem;
 }
-.nav-cart i {
+
+.nav-cart{
   display: flex;
-  
+  font-size: small;
 }
+// .navsigin{
+//   border: 20px solid rgb(255, 0, 47);
+//   margin-right: 200px;
+// }
 
 
-
-
-.panel {
-  display: flex;
-  background-color: #495869;
-  color: white;
-  align-items: center;
-  justify-content: space-evenly;
-  position: relative; 
-  top: 60px; 
-  left: 0; 
-  width: 100%; 
-  z-index: 999; 
-}
-
-.panel-options {
-  width: 70%;
-}
-
-.panel-options p {
-  display: inline; /* Make sure the child paragraphs display inline */
-  margin-left: 10px;
-}
-.all{
-margin-right: 200px;
-
-}
-.sign-in{
-  
-}
