--- a/front-end/src/Header.scss
+++ b/front-end/src/Header.scss
@@ -12,7 +12,7 @@
   left: 0;
   width: 100%;
   height: 60px;
-  background-color: #56ef48;
+  background-color: #e7a582;
   color: white;
   display: flex;
   align-items: center;
