--- a/front-end/src/Contact.scss
+++ b/front-end/src/Contact.scss
@@ -24,9 +24,11 @@ header h1 {
 main {
     padding: 20px;
 }
-.contact-details{
+
+.contact-details {
     margin-top: 20px;
 }
+
 .contact-details ul {
     list-style-type: none;
 }
@@ -52,4 +54,29 @@ footer {
     color: #fff;
     text-align: center;
     padding: 10px 0;
+}
+
+/* Media Queries for Responsiveness */
+@media screen and (max-width: 768px) {
+    header {
+        padding: 10px 0;
+    }
+    header h1 {
+        font-size: 1.5em;
+    }
+    .contact-details ul li {
+        margin-bottom: 5px;
+    }
+    .faq h3 {
+        margin-bottom: 3px;
+    }
+    .faq p {
+        margin-bottom: 10px;
+    }
+    .company-timings p {
+        margin-bottom: 5px;
+    }
+    footer {
+        padding: 5px 0;
+    }
 }
