--- a/front-end/src/Main2.scss
+++ b/front-end/src/Main2.scss
@@ -61,8 +61,9 @@ body {
     margin-left: 0.5rem;
   }
 
-  .category:hover{
-    border: 10px solid rgb(227, 117, 80);
+  .category-img:hover{
+    border: 5px solid rgb(227, 117, 80);
+    z-index: 1000;
 
 
 }
