--- a/front-end/src/Components/PlaceOrder/PlaceOrder.scss
+++ b/front-end/src/Components/PlaceOrder/PlaceOrder.scss
@@ -2,19 +2,20 @@
 
     margin-top: 20px;
     border: 3px solid rgb(222, 195, 195);
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 25%;
+   
     border-radius: 1.5rem;
-    display: flex;
+    
+    width: 50%;
   
 }
 
 label{
      //border: 10px solid rgb(240, 54, 8);
      display: flex;
-     justify-content: center;
-     align-items: center;
-     font-size: 2vw;
+     justify-content: start;
+     align-items: start;
+     font-size: 1.5vw;
      width: 600px;
      
      margin-left: 25%;
@@ -29,8 +30,8 @@ input{
     // height: 50px;
     display: flex;
    //border: 10px solid rgb(51, 153, 63);
-   width: 600px;
-   height: 50px;
+   width: 300px;
+   height: 30px;
    margin-left: 25%;
    margin-top: 10px;
    margin-bottom: 10px;
@@ -41,7 +42,7 @@ input{
 }
 .btns-place-order{
     display: flex;
-    margin-left: 55%;
+    // margin-left: 55%;
     justify-content: center;
     
    
@@ -63,13 +64,20 @@ input{
 }
 .shipping{
     //border: 20px solid rebeccapurple;
-    margin-left: 40%;
+   margin-left: 25%;
     width: 500px;
     color: rgb(255, 200, 0);
 }
 .payment{
     //border: 20px solid rebeccapurple;
-    margin-left: 40%;
+    
     width: 500px;
+    margin-left: 25%;
     color: rgb(255, 200, 0);
+}
+
+
+.error{
+    color: rebeccapurple;
+    text-align:center;
 }
