--- a/front-end/src/Header.scss
+++ b/front-end/src/Header.scss
@@ -12,7 +12,7 @@
   left: 0;
   width: 100%;
   height: 60px;
-  background-color: #e7a582;
+  background: linear-gradient(to right, #e45b87  , #2133da);
   color: white;
   display: flex;
   align-items: center;
