--- a/front-end/src/LoginCss.scss
+++ b/front-end/src/LoginCss.scss
@@ -154,9 +154,9 @@
 }
 
 .toggle {
-    background-color: linear-gradient(to left, #00a1ff, #00ff8f);
+    background-color: linear-gradient(to left, #00a1ff, #ff5e00);
     height: 100%;
-    background: linear-gradient(to right, #C33764  , #1D2671);
+    background: linear-gradient(to right, #C33764  , #0d1ebb);
     color: #fff;
     position: relative;
     left: -100%;
