--- a/front-end/src/SuggestedImages.scss
+++ b/front-end/src/SuggestedImages.scss
@@ -10,7 +10,7 @@
     width: 100%;
     height: 100%;
     //background: linear-gradient(to right, hsl(94, 20%, 93%), #ceffc9);
-    border: #0c0101cc solid;
+  //  border: #0c0101cc solid;
 
   }
   
@@ -212,8 +212,8 @@
 } 
 .descr{
  
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  //font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: 1rem;
-  font-weight: bolder;
+ font-weight: 100;
   margin-bottom: 20px;
 }
