--- a/front-end/src/About.scss
+++ b/front-end/src/About.scss
@@ -1,18 +1,16 @@
-body {
+.about-page {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
 }
 
-header {
+.header-about{
   background-color: #333;
   color: #fff;
   padding: 20px;
 }
 
-header h1 {
-  margin: 0;
-}
+
 
 nav ul {
   list-style-type: none;
@@ -35,13 +33,7 @@ nav ul li a {
   padding: 0 20px;
 }
 
-section {
+.about-section {
   margin-bottom: 30px;
 }
 
-footer {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  padding: 10px;
-}
