--- a/front-end/src/Cart.scss
+++ b/front-end/src/Cart.scss
@@ -15,13 +15,13 @@
 }
 .cart-images{
     display: inline-block;
-    width: auto;
-    height: 200px;
+    width: 15%;
+height: 263px;
     display: cover;
 
 }
 .deselect-cart{
-   padding-left: 140px;
+   padding-left: 5%;
     color: rgb(15, 137, 231);
     padding-top: 10px;
     font-size: larger;
@@ -33,12 +33,13 @@
     
 }
 .price-p{
-   // margin-left: 1120px;
-   margin-left: 73%;
+   
+   margin-left: 70%;
     padding-top: 10px;
     font-size: larger;
     color: rgb(15, 137, 231);
     padding-bottom: 20px;
+    
 }
 .product-card-cart{
   
@@ -54,10 +55,11 @@
     
 }
 .cart-right{
-  // border: 10px solid rgb(153, 51, 51);
+ //border: 10px solid rgb(153, 51, 51);
    display: flex;
    align-items: center;
-justify-content: center;
+padding-left: 16.5%;
+width: 40%;
 }
 
 
@@ -90,22 +92,30 @@ justify-content: center;
 
 .total-price{
     //margin-left: 1330px;
-    margin-left: 90%;
+    margin-left: 80%;
     padding-top: 10px;
     font-size: larger;
     color: rgb(15, 137, 231);
 }
 .place-order{
     display: flex;
-    justify-content: end;
-    margin: 10px;
-    margin-right: 40px;
+    justify-content: center;
+    margin: 30px;
+    margin-bottom: 5rem;
     
 
 }
 .place-order-btn{
- background-color: rgb(239, 194, 151);
- height: 30px;
- width: 100px;
+ background-color: #003DA5;
+ height: 40px;
+ width: 200px;
+ border-radius: 0.8rem;
+ color: white;
     
 }
+.place-order-btn:hover{
+    background-color: black;
+    
+
+}
+
