--- a/front-end/src/Components/PlaceOrder/PlaceOrder.scss
+++ b/front-end/src/Components/PlaceOrder/PlaceOrder.scss
@@ -51,17 +51,25 @@ input{
     margin-right: 20px;
     width: 100px;
     height: 30px;
-    background-color: rgba(240, 161, 107, 0.978);
+    background-color: #003DA5;
     border-radius: 10px;
-    
+    color: white;
 }
 .back-button{
     margin-right: 20px;
     width: 100px;
     height: 30px;
-    background-color: rgba(240, 161, 107, 0.978);
+    background-color: #003DA5;
     border-radius: 10px;
+    color: white;
 }
+.back-button:hover{
+    background-color:black;
+}
+.purchase-button:hover{
+    background-color:black;
+}
+
 .shipping{
     //border: 20px solid rebeccapurple;
    margin-left: 25%;
