--- a/front-end/src/Main2.scss
+++ b/front-end/src/Main2.scss
@@ -8,7 +8,7 @@ body {
     color: white;
     padding: 10px;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 10px;
    
 }
 
@@ -38,7 +38,7 @@ body {
     bottom: 0;
     margin-bottom: 15px;
     width: 300px;
-    background-image: linear-gradient(to top, rgb(112, 94, 246), rgba(4, 151, 177, 0));
+    //background-image: linear-gradient(to top, rgb(112, 94, 246), rgba(4, 151, 177, 0));
     height: 200px;
     z-index: 500;
     left: 50%;
@@ -77,6 +77,7 @@ body {
     transition: opacity 0.3s ease-in-out;
     opacity: 0;
     z-index: 999;
+    background-color: #003DA5;
 }
 
 .image-and-button:hover  .buynow {
@@ -103,7 +104,7 @@ body {
 
 
 .m2price {
-    color: #ff6347;
+    color: #e45b87 ;
     font-size: 1.2rem;
     font-weight: bold;
   }
@@ -111,7 +112,7 @@ body {
   .m2discount {
     font-size: 0.8rem;
     color: #fff;
-    background-color: #ff6347;
+    background-color:#e45b87 ;
     padding: 0.2rem 0.5rem;
     margin-left: 0.5rem;
   }
@@ -120,6 +121,7 @@ body {
 .hero-section{
     background-image: url(src/assets/images/ti1.jpg);
     background-size: cover;
+    flex: 1;
     height: 400px;
     width: 100%;
     
