--- a/front-end/src/Components/PlaceOrder/PlaceOrder.scss
+++ b/front-end/src/Components/PlaceOrder/PlaceOrder.scss
@@ -1,91 +1,77 @@
-.full-place-order{
 
-    margin-top: 20px;
-    border: 3px solid rgb(222, 195, 195);
-    margin-left: 25%;
-   
+
+.full-place-order {
+    margin-top: 40px;
+    //border: 3px solid rgb(222, 195, 195);
+   // box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
     border-radius: 1.5rem;
-    
-    width: 50%;
-  
-}
-
-label{
-     //border: 10px solid rgb(240, 54, 8);
-     display: flex;
-     justify-content: start;
-     align-items: start;
-     font-size: 1.5vw;
-     width: 600px;
-     
-     margin-left: 25%;
-     margin-right: auto;
-    // display: block;
- 
-    // justify-items: center;
-}
-input{
-    // display: block;
-    // width: 40%;
-    // height: 50px;
     display: flex;
-   //border: 10px solid rgb(51, 153, 63);
-   width: 300px;
-   height: 30px;
-   margin-left: 25%;
-   margin-top: 10px;
-   margin-bottom: 10px;
-  
-//    justify-content: center;
-//      align-items: center;
-//      font-size: 2vw;
-}
-.btns-place-order{
-    display: flex;
-    // margin-left: 55%;
     justify-content: center;
-    
+    width: 100%;
+   }
    
-}
-.purchase-button{
-    margin-right: 20px;
-    width: 100px;
-    height: 30px;
-    background-color: #003DA5;
-    border-radius: 10px;
-    color: white;
-}
-.back-button{
-    margin-right: 20px;
-    width: 100px;
-    height: 30px;
-    background-color: #003DA5;
-    border-radius: 10px;
-    color: white;
-}
-.back-button:hover{
-    background-color:black;
-}
-.purchase-button:hover{
-    background-color:black;
-}
-
-.shipping{
-    //border: 20px solid rebeccapurple;
-   margin-left: 25%;
-    width: 500px;
-    color: rgb(255, 200, 0);
-}
-.payment{
-    //border: 20px solid rebeccapurple;
-    
-    width: 500px;
+   label {
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    font-size: 1vw;
+    width: 600px;
     margin-left: 25%;
+    margin-right: auto;
+   }
+   
+   input {
+    display: flex;
+    width: 300px;
+    height: 30px;
+    margin-left: 25%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+   }
+   
+   .btns-place-order {
+    display: flex;
+    justify-content: center;
+   }
+   
+   .purchase-button, .back-button {
+    margin-right: 20px;
+    width: 100px;
+    height: 30px;
+    background-color: #003DA5;
+    border-radius: 10px;
+    color: white;
+    cursor: pointer;
+    border: none;
+    transition: background-color 0.3s ease;
+   }
+   
+   .back-button:hover, .purchase-button:hover {
+    background-color: black;
+   }
+   
+   .shipping, .payment {
+    margin-left: 25%;
+    width: 500px;
     color: rgb(255, 200, 0);
-}
-
-
-.error{
+   }
+   
+   .error {
     color: rebeccapurple;
-    text-align:center;
-}
+    text-align: center;
+   }
+   
+   input {
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+   }
+   
+   .btns-place-order {
+    margin-top: 20px;
+   }
+   
+   .purchase-button, .back-button {
+    font-size: 16px;
+   }
+   
