--- a/front-end/src/Main2.scss
+++ b/front-end/src/Main2.scss
@@ -17,6 +17,7 @@ body {
     justify-content: space-around;
     flex-wrap: wrap;
     background-color: hwb(216 95% 4%);
+    
 }
 
 .category {
@@ -52,15 +53,14 @@ body {
     width: 300px; /* Set a fixed width */
     height: 300px; /* Set a fixed height */
     object-fit: cover; /* Maintain aspect ratio and cover the entire space */
-    border: 0.1px solid rgb(130, 72, 184);
+   // border: 0.1px solid rgb(130, 72, 184);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
 }
 
 
 .buynow{
     position: absolute;
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
+    
     left: 50%;
     top: 80%;
     transform: translateX(-50%);
@@ -70,7 +70,6 @@ body {
     outline: none;
     border: none;
     border-radius: 0.2rem;
-    background-color: #e9a110;
     margin-bottom: 30%;
     cursor: pointer;
     transition: ease-in-out;
@@ -89,19 +88,6 @@ body {
 .category p {
     margin: 10px 0;
 }
-
-
-.hrx {
-    margin-top: 50px;
-    text-align: center;
-}
-
-.hrx h1 {
-    font-size: 36px;
-    line-height: 48px;
-    color: #003DA5;
-}
-
 
 .m2price {
     color: #e45b87 ;
@@ -130,13 +116,4 @@ body {
 
 
   
-  /* Styles for the search bar input */
-  .search input[type="text"] {
-    width: 100%; /* Make the search bar input span the full width of its container */
-    padding: 10px; /* Add padding for better appearance */
-    font-size: 16px; /* Adjust font size */
-    border: 1px solid #ccc; /* Add border for better visibility */
-    border-radius: 4px; /* Add border radius for rounded corners */
-    box-sizing: border-box;
-     margin-top: 50px;
-    margin-bottom: 5px;}
+ 
