--- a/front-end/src/Components/PlaceOrder/PlaceOrder.scss
+++ b/front-end/src/Components/PlaceOrder/PlaceOrder.scss
@@ -53,7 +53,7 @@
    .shipping, .payment {
     margin-left: 25%;
     width: 500px;
-    color: rgb(255, 200, 0);
+    color: rgba(165, 51, 163, 0.851);
    }
    
    .error {
